Feature/bookstore order service
* feat(order-service): implement order management microservice

Adds bookstore-order-service as a second microservice with full hexagonal
architecture (domain → application → adapters). Includes:

- Domain: Order aggregate, OrderItem value object, OrderStatus transitions
- Application: CreateOrder, GetOrder, ListOrders, CancelOrder use cases
  with ownership enforcement at the service layer
- Adapters: REST controller, JPA persistence (BINARY(16) + OrderItemJpaEntity
  with @OneToMany), Feign client for book validation, RS256 JWT validator
- Observability: CorrelationIdFilter (X-Correlation-Id MDC propagation),
  JwtPropagationInterceptor forwards token + correlation ID to bookstore-api,
  logback-spring.xml includes correlationId in every log line
- Swagger/OpenAPI with cross-service spec dropdown
- Actuator health/info endpoints

Also updates bookstore-api for BINARY(16) UUID storage, stream modernization,
and matching observability/actuator config.

* test(order-service): add comprehensive unit and integration test suite

Unit tests (no Spring context):
- OrderTest (20): aggregate invariants, status transitions, factory methods
- OrderItemTest (10): subtotal calculation, validation
- OrderServiceTest (10): all use-case flows + ownership enforcement
- OrderRestMapperTest (6): field mapping, subtotal, totalAmount, item order
- JwtValidatorTest (11): valid/expired/tampered/wrong-key/malformed tokens

Integration tests (@SpringBootTest + H2 + @MockitoBean):
- OrderControllerIT (9): full HTTP flow for create, get, list, cancel

Total: 66 tests, 0 failures.

* docs: add full platform and order-service documentation

- README.md: adds order-service Swagger URL, cross-service dropdown note,
  design decision for correlation IDs
- bookstore-order-service/README.md: full rewrite covering architecture,
  security model, observability, inter-service communication, data model,
  API reference, env vars, and test coverage