@@ -14,7 +14,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -40,13 +39,13 @@ public class BookJpaAdapter implements BookRepositoryPort {
 
     @Override
     public List<Book> findAll() {
-        return jpaRepository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
+        return jpaRepository.findAll().stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public List<Book> findByOwnerId(UserId ownerId) {
         return jpaRepository.findByOwner_Id(ownerId.value()).stream()
-                .map(mapper::toDomain).collect(Collectors.toList());
+                .map(mapper::toDomain).toList();
     }
 
     @Override
