@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -41,7 +40,7 @@ public class UserJpaAdapter implements UserRepositoryPort {
 
     @Override
     public List<User> findAll() {
-        return jpaRepository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
+        return jpaRepository.findAll().stream().map(mapper::toDomain).toList();
     }
 
     @Override
